--- a/eudora.html
+++ b/eudora.html
@@ -19,7 +19,7 @@
             <ul>
                 <a href="index.html"><li class="itens">Home</li></a>
                 <li class="itens">Eudora</li>
-                <li class="itens">Obotcário</li>
+                <li class="itens">Oboticário</li>
                 <li class="itens">Paco rabane </li>
                 <li class="itens">Árabe</li>
                 <li class="itens">Dior</li>
