--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <ul>
                 <a href="index.html"><li class="itens">Home</li></a>
                 <a href="eudora.html"><li class="itens">Eudora</li></a>
-                <li class="itens">Obotcário</li>
+                <li class="itens">Oboticário</li>
                 <li class="itens">Paco rabane </li>
                 <li class="itens">Árabe</li>
                 <li class="itens">Dior</li>
@@ -70,7 +70,7 @@
                 <p>R$488,90</p>
             </div>
             <div class="card">
-                <img src="assets/" width="200">
+                <img src="assets/ara.webp" width="200">
                 <h2>Perfume ARMAF Club de Nuit Intense Edition, 105 ml</h2>
                 <p>R$254,40</p>
             </div>
